--- a/style.css
+++ b/style.css
@@ -2,32 +2,40 @@
  * Always set the map height explicitly to define the size of the div element
  * that contains the map. 
  */
- #map {
-    height: 50%;
-  }
-  
-  /* 
+#map {
+  height: 50%;
+}
+
+/* 
    * Optional: Makes the sample page fill the window. 
    */
-  html,
-  body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .custom-map-control-button {
-    background-color: #fff;
-    border: 0;
-    border-radius: 2px;
-    box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
-    margin: 10px;
-    padding: 0 0.5em;
-    font: 400 18px Roboto, Arial, sans-serif;
-    overflow: hidden;
-    height: 40px;
-    cursor: pointer;
-  }
-  .custom-map-control-button:hover {
-    background: rgb(235, 235, 235);
-  }
+canvas {
+  display: none;
+}
+
+body {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 12px;
+  box-sizing: border-box;
+}
+
+video {
+  width: 100%;
+  width: 100%;
+  border: 1px solid white;
+  border-radius: 1.5rem;
+}
+
+.info-message {
+  width: -webkit-fill-available;
+  padding: 16px;
+  border-radius: 1rem;
+  background-color: rgb(102 212 102 / 24%);
+  color: #121212;
+  margin-bottom: 16px;
+  text-align: center;
+}
